Add pics. Minor fixes

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <!-- <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
             <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a> -->
             <a class="link dim dark-gray f6 f5-l dib" href="guide.html" title="Contact">Swap Guide</a>
-            <a class="link dim dark-gray f6 f5-l dib" href="support.html" title="Contact">Support us</a>
-            <a class="link dim dark-gray f6 f5-l dib" href="#contact" title="Contact">Contact</a>
+            <a class="link dim dark-gray f6 f5-l dib ml3" href="support.html" title="Contact">Support us</a>
+            <a class="link dim dark-gray f6 f5-l dib ml3" href="#contact" title="Contact">Contact</a>
         </div>
     </nav>
-    <section class="bg-gold sans-serif mb5">
+    <section class="bg-yellow sans-serif mb5">
         <div class="mw9 center pa4 pt5-ns ph7-l">
             <h3 class="f2 f1-m f-headline-l measure-narrow lh-title mv0">
                 <span class="ttu bg-black-90 lh-copy white pa1 tracked-tight">
@@ -62,8 +62,8 @@
             </div>
             <div class="fl w-100 w-50-ns pa2">
                 <div class="bg-white pa4">
-                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
-                        <img src="assets/img/bg-1.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns br3">
+                        <img src="assets/img/bg-1.jpeg" class="db br3" alt="Photo of a dimly lit room with a computer interface terminal.">
                     </div>
                 </div>
             </div>
@@ -73,8 +73,8 @@
         <div class="cf ph2-ns">
             <div class="fl w-100 w-50-ns pa2">
                 <div class="bg-white pa4">
-                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
-                        <img src="assets/img/bg-2.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns br3">
+                        <img src="assets/img/bg-2.jpeg" class="db br3" alt="Photo of a dimly lit room with a computer interface terminal.">
                     </div>
                 </div>
             </div>
@@ -113,8 +113,8 @@
             </div>
             <div class="fl w-100 w-50-ns pa2">
                 <div class="bg-white pa4">
-                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns">
-                        <img src="assets/img/bg-3.jpeg" class="db" alt="Photo of a dimly lit room with a computer interface terminal.">
+                    <div class="shadow-1 order-1 order-2-ns mb4 mb0-ns w-100 w-100-ns br3">
+                        <img src="assets/img/bg-3.jpeg" class="db br3" alt="Photo of a dimly lit room with a computer interface terminal.">
                     </div>
                 </div>
             </div>
