--- a/support.html
+++ b/support.html
@@ -19,15 +19,14 @@
             <!-- <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="Home">Home</a>
             <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a> -->
             <a class="link dim dark-gray f6 f5-l dib" href="guide.html" title="Contact">Swap Guide</a>
-            <a class="link dim dark-gray f6 f5-l dib" href="support.html" title="Contact">Support us</a>
-            <a class="link dim dark-gray f6 f5-l dib" href="#contact" title="Contact">Contact</a>
+            <a class="link dim dark-gray f6 f5-l dib ml3" href="support.html" title="Contact">Support us</a>
+            <a class="link dim dark-gray f6 f5-l dib ml3" href="#contact" title="Contact">Contact</a>
         </div>
     </nav>
 
     <article class="helvetica pb3">
         <header class="vh-100 bg-light-pink dt w-100">
-            <div style="background:url(assets/img/header.jpeg) no-repeat center right;background-size: cover;"
-                class="dtc v-mid cover ph3 ph4-m ph5-l">
+            <div style="background:url(assets/img/header.jpeg) no-repeat center right;background-size: cover;" class="dtc v-mid cover ph3 ph4-m ph5-l">
                 <h1 class="f2 f-subheadline-l measure lh-title fw9 near-white">Support us</h1>
                 <h2 class="f6 fw6 black near-white">Your Generosity Makes This Possible</h2>
             </div>
@@ -48,8 +47,8 @@
                 there are three ways you can do so.</p>
             <div class="f5 f3-m lh-copy">
                 <div class="cf dt-l w-100 bt b--black-10 pv4">
-                    <div class="dtc-l v-mid mw6 pr3-l">
-                        <img class="w-100" src="assets/img/venue.jpeg" alt="" />
+                    <div class="dtc-l v-mid mw6 pr3-l br3">
+                        <img class="w-100 br3 shadow-1" src="assets/img/venue.jpeg" alt="" />
                     </div>
                     <div class="dtc-l v-mid f6 f5-m f3-l measure-l">
                         <p class="measure pv4-l center">
@@ -93,28 +92,30 @@
         </div>
     </article>
     <article class="center mw5 mw6-ns br3 hidden ba b--black-10 mv4">
-            <h1 class="f4 bg-gold br3 br--top mv0 pv2 ph3">Money</h1>
-            <div class="pa3 bt b--black-10">
-              <p class="f6 f5-ns lh-copy measure">
-                    If you would like to help and none of the above options are right for you, then you can still contribute by donating money to the cause. We will have a donations jar at the event available, or you can also connect to us via Venmo for an easy, digital transaction.
-              </p>
-            </div>
-          </article>
-          <section class="pa3 pa5-ns">
-                <p class="f4 lh-copy measure">
-                        You can find us on Venmo as <a href="@Wilmington-FoodSwap">@Wilmington-FoodSwap.(I need the direct link)</a>
-                </p>
-                <p class="f4 lh-copy measure">
-                        Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
-                </p>
-                <p class="f4 lh-copy measure">
-                        Thank you and have a wonderful day!
-                </p>
-            </section>
-            <div class="flex items-center justify-center pa4 bg-gold navy">
+        <h1 class="f4 bg-yellow br3 br--top mv0 pv2 ph3">Money</h1>
+        <div class="pa3 bt b--black-10">
+            <p class="f6 f5-ns lh-copy measure">
+                If you would like to help and none of the above options are right for you, then you can still
+                contribute by donating money to the cause. We will have a donations jar at the event available, or you
+                can also connect to us via Venmo for an easy, digital transaction.
+            </p>
+        </div>
+    </article>
+    <section class="pa3 pa5-ns">
+        <p class="f4 lh-copy measure">
+            You can find us on Venmo as <a href="@Wilmington-FoodSwap">@Wilmington-FoodSwap.(I need the direct link)</a>
+        </p>
+        <p class="f4 lh-copy measure">
+            Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
+        </p>
+        <p class="f4 lh-copy measure">
+            Thank you and have a wonderful day!
+        </p>
+    </section>
+    <div class="flex items-center justify-center pa4 bg-yellow navy">
 
-                    <span class="lh-title ml3">Wilmington Food Swap</span>
-                  </div>
+        <span class="lh-title ml3"><a href="http://instagram.com/wilmington_food_swap/">@wilmington_food_swap</a></span>
+    </div>
 
 
 </body>
