Fix links. Fix color on form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </p>
                     <p class="f5 lh-copy">
                         For information about how you can help, see our
-                        <a href="#">Support Us</a> page.
+                        <a href="support.html">Support Us</a> page.
                     </p>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     </p>
                     <p class="f5 lh-copy">
                         Take a minute and review our
-                        <a href="#">Tips For Successful Swapping</a>
+                        <a href="guide.html">Tips For Successful Swapping</a>
                     </p>
                 </div>
             </div>
@@ -126,7 +126,7 @@
         }
     </style>
 
-    <section class="pa4 black-80 bg-gold" id="contact">
+    <section class="pa4 black-80 bg-yellow" id="contact">
 
         <div class="mw9 center ph3-ns">
             <div class="cf ph2-ns">
