Remove card and replace with normal flow

--- a/support.html
+++ b/support.html
@@ -79,19 +79,23 @@
                             follow though it can impact someone else’s experience negatively.
                         </p>
                     </div>
-                    <!-- <div class="fl w-100 w-50-l">
-                        <p class="f5">
-                            During low tides, a powerful turbine water pump,
-                            built inside a cave at sea level, could be switched on from a control
-                            room and could fill the tanks at a rate of 6,000 US gallons a minute,
-                            recycling all the water in five hours.
+                </div>
+                <div class="cf">
+                    <div class="fl w-100 w-50-l">
+                        <p class="f5 f5-m f3-l">
+                            <span>Money</span>:
+                            If you would like to help and none of the above options are right for you, then you can
+                            still
+                            contribute by donating money to the cause. We will have a donations jar at the event
+                            available, or you
+                            can also connect to us via Venmo for an easy, digital transaction.
                         </p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
     </article>
-    <article class="center mw5 mw6-ns br3 hidden ba b--black-10 mv4">
+    <!-- <article class="center mw5 mw6-ns br3 hidden ba b--black-10 mv4">
         <h1 class="f4 bg-yellow br3 br--top mv0 pv2 ph3">Money</h1>
         <div class="pa3 bt b--black-10">
             <p class="f6 f5-ns lh-copy measure">
@@ -100,7 +104,7 @@
                 can also connect to us via Venmo for an easy, digital transaction.
             </p>
         </div>
-    </article>
+    </article> -->
     <section class="pa3 pa5-ns">
         <p class="f4 lh-copy measure">
             You can find us on Venmo as <a href="@Wilmington-FoodSwap">@Wilmington-FoodSwap.(I need the direct link)</a>
