Add promo banner for registering

--- a/index.html
+++ b/index.html
@@ -37,21 +37,43 @@
     <section class="pa4 ph7-l georgia mw9-l center mb5">
         <h2 class="ttu f3">Welcome Swappers</h2>
         <p class="f5 f3-ns lh-copy measure georgia">
-            Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners, farmers and local
-            like-minded people. Bring an old friend or come and make new friends. Serving the Wilmington, Delaware area.
+            Bring your homemade or homegrown items for a barter style swap! Meet fellow foodies, bakers, gardeners,
+            farmers and local
+            like-minded people. Bring an old friend or come and make new friends. Serving the Wilmington, Delaware
+            area.
         </p>
     </section>
 
+    <section class="ph3 ph5-ns pv5">
+        <article class="mw8 center br2 ba b--yellow bg-yellow">
+            <div class="dt-ns dt--fixed-ns w-100">
+                <div class="pa3 pa4-ns dtc-ns v-mid">
+                    <div>
+                        <h2 class="fw4 mt0 mb3">This is a promo title </h2>
+                        <p class="black-70 measure lh-copy mv0">
+                            This is suporting copy for the wonderful promo catchphrase that is going to be used.
+                        </p>
+                    </div>
+                </div>
+                <div class="pa3 pa4-ns dtc-ns v-mid">
+                    <a href="https://www.eventbrite.com/e/wilmington-food-swap-spring-2019-meeting-tickets-55196218375" class="no-underline f6 tc db w-100 pv3 bg-animate bg-blue hover-bg-dark-blue white br2">Sign
+                        up for free</a>
+                </div>
+            </div>
+        </article>
+    </section>
     <section class="mw9 center ph3-ns mb5">
         <div class="cf ph2-ns">
             <div class="fl w-100 w-50-ns pa2">
                 <div class="bg-white pa4 tl">
                     <h3 class="f3 ttu">Who are we?</h3>
                     <p class="f5 lh-copy">
-                        Wilmington Food Swap is a community of local foodies who share a passion for homemade, homegrown, or foraged foods.
+                        Wilmington Food Swap is a community of local foodies who share a passion for homemade,
+                        homegrown, or foraged foods.
                     </p>
                     <p class="f5 lh-copy">
-                        Starting Spring 2019, we will meet quarterly to swap and sample each others kitchen creations. While this event is open to
+                        Starting Spring 2019, we will meet quarterly to swap and sample each others kitchen creations.
+                        While this event is open to
                         anyone, registration in advance is required to attend.
                     </p>
                     <p class="f5 lh-copy">
@@ -82,8 +104,10 @@
                 <div class="bg-white pa4 tr">
                     <h3 class="f3 ttu">What is a food swap?</h3>
                     <p class="f5 lh-copy">
-                        A food swap is a quarterly event where you and fellow foodies meet to exchange and share their homemade, homegrown, or foraged
-                        foods with each other. Food swaps are a great way to change up the homemade and homegrown foods in
+                        A food swap is a quarterly event where you and fellow foodies meet to exchange and share their
+                        homemade, homegrown, or foraged
+                        foods with each other. Food swaps are a great way to change up the homemade and homegrown foods
+                        in
                         your pantry, while getting to meet local foodies like yourself in the process.
                     </p>
                     <p class="f5 lh-copy">
@@ -100,14 +124,19 @@
                 <div class="bg-white pa4">
                     <h3 class="f3 ttu tl">What kinds of food should I bring?</h3>
                     <p class="f6 lh-copy">
-                        In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from your garden. Jams, jellies
-                        and marmalade are frequently swapped at these events. Get creative with pasta, granola, kombucha,
-                        or condiments. Candies and cookies are great as well, but be mindful of portion size. Someone who
-                        made a pint of jam probably would not want to make a swap for just one or two cookies. Whatever you
+                        In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from
+                        your garden. Jams, jellies
+                        and marmalade are frequently swapped at these events. Get creative with pasta, granola,
+                        kombucha,
+                        or condiments. Candies and cookies are great as well, but be mindful of portion size. Someone
+                        who
+                        made a pint of jam probably would not want to make a swap for just one or two cookies. Whatever
+                        you
                         decide to bring, make sure that it’s packaged in bags or jars and properly labeled.
                     </p>
                     <p class="f6 lh-copy">
-                        It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck dish to share with the group.
+                        It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck
+                        dish to share with the group.
                     </p>
                 </div>
             </div>
@@ -132,40 +161,46 @@
             <div class="cf ph2-ns">
                 <div class="fl w-100 w-50-ns pa2">
                     <div class="pv4">
-                            <h2 class="f2">Contact Us</h2>
-                            <p class="measure">Hi there! You can use this contact form to reach out with any questions you may have about who we are, what a food swap is, ideas of what to bring to swap, or anything else.</p>
-                            <p class="measure">Additionally, if you have a venue you’d be willing to let us have a meet at, or want to know if we need any help with supplies, feel free to reach out also.</p>
-                            <p class="measure">You can also use our email address below if you prefer.</p>
-                            <p class="measure">We look forward to hearing from you!</p>
+                        <h2 class="f2">Contact Us</h2>
+                        <p class="measure">Hi there! You can use this contact form to reach out with any questions you
+                            may have about who we are, what a food swap is, ideas of what to bring to swap, or anything
+                            else.</p>
+                        <p class="measure">Additionally, if you have a venue you’d be willing to let us have a meet at,
+                            or want to know if we need any help with supplies, feel free to reach out also.</p>
+                        <p class="measure">You can also use our email address below if you prefer.</p>
+                        <p class="measure">We look forward to hearing from you!</p>
                     </div>
                 </div>
 
                 <div class="fl w-100 w-50-ns pa2">
                     <div class="pv4">
-                            
-                            <form action="sign-up_submit" accept-charset="utf-8" netlify>
-                                    <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
-                                        <legend class="ph0 mh0 fw6 clip">Sign Up</legend>
-                                        <div class="mt3">
-                                            <label class="db fw4 lh-copy f6" for="name">Name</label>
-                                            <input class="pa2 input-reset ba b--black-20" type="text" name="name" id="name">
-                                        </div>
-                                        <div class="mt3 mb3">
-                                            <label class="db fw4 lh-copy f6" for="email-address">Email address</label>
-                                            <input class="pa2 input-reset ba b--black-20 measure" type="email" name="email-address" id="email-address">
-                                        </div>
-                                        <div>
-                                            <label for="comment" class="f6 b db mb2">Comments
-                                                <span class="normal black-60">(optional)</span>
-                                            </label>
-                                            <textarea id="comment" name="comment" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2" aria-describedby="comment-desc"></textarea>
-                                        </div>
-                                    </fieldset>
-                                    <div class="mt3 mb3">
-                                        <input class="b ph3 pv2 input-reset ba b--black bg-white grow pointer f6" type="submit" value="Submit">
-                                    </div>
-                                    <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com</small>
-                                </form>
+
+                        <form action="sign-up_submit" accept-charset="utf-8" netlify>
+                            <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
+                                <legend class="ph0 mh0 fw6 clip">Sign Up</legend>
+                                <div class="mt3">
+                                    <label class="db fw4 lh-copy f6" for="name">Name</label>
+                                    <input class="pa2 input-reset ba b--black-20" type="text" name="name" id="name">
+                                </div>
+                                <div class="mt3 mb3">
+                                    <label class="db fw4 lh-copy f6" for="email-address">Email address</label>
+                                    <input class="pa2 input-reset ba b--black-20 measure" type="email" name="email-address"
+                                        id="email-address">
+                                </div>
+                                <div>
+                                    <label for="comment" class="f6 b db mb2">Comments
+                                        <span class="normal black-60">(optional)</span>
+                                    </label>
+                                    <textarea id="comment" name="comment" class="db border-box hover-black w-100 measure ba b--black-20 pa2 br2"
+                                        aria-describedby="comment-desc"></textarea>
+                                </div>
+                            </fieldset>
+                            <div class="mt3 mb3">
+                                <input class="b ph3 pv2 input-reset ba b--black bg-white grow pointer f6" type="submit"
+                                    value="Submit">
+                            </div>
+                            <small id="comment-desc" class="f6 black-60">WilmingtonFoodSwap@gmail.com</small>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -173,7 +208,7 @@
     </section>
     <section class="juice pv2 bg-gold">
         <ul class="juicer-feed" data-feed-id="wilmington_food_swap"></ul>
-    </section>    
+    </section>
 
     <div class="juicy"></div>
     <script>
@@ -183,12 +218,12 @@
         // Originally I tried removing the logo by detecting script load
         // but for some reason that didn't work
         // The script naturally evolved into this convoluted mess
-        script.onload = function() {
+        script.onload = function () {
             console.log("script loaded")
             function pause() {
                 wait_a_little = setTimeout(removeLogo, 1500);
             }
-            function removeLogo(){
+            function removeLogo() {
                 elem = document.querySelector(".referral");
                 elem.parentNode.removeChild(elem);
                 console.log(elem);
