--- a/support.html
+++ b/support.html
@@ -107,7 +107,7 @@
     </article> -->
     <section class="pa3 pa5-ns">
         <p class="f4 lh-copy measure">
-            You can find us on Venmo as <a href="@Wilmington-FoodSwap">@Wilmington-FoodSwap.(I need the direct link)</a>
+            You can find us on Venmo as <a href="https://venmo.com/Wilmington-FoodSwap">@Wilmington-FoodSwap.</a>
         </p>
         <p class="f4 lh-copy measure">
             Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
