Fix support us paragraphs

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <div class="dt-ns dt--fixed-ns w-100">
                 <div class="pa3 pa4-ns dtc-ns v-mid">
                     <div>
-                        <h2 class="fw4 mt0 mb3">This is a promo title </h2>
+                       
                         <p class="black-70 measure lh-copy mv0">
-                            This is suporting copy for the wonderful promo catchphrase that is going to be used.
+                            Click here to register for our spring 2019 food swap
                         </p>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
             <div class="fl w-100 w-50-ns pa2">
                 <div class="bg-white pa4">
                     <h3 class="f3 ttu tl">What kinds of food should I bring?</h3>
-                    <p class="f6 lh-copy">
+                    <p class="f5 lh-copy">
                         In truth, the sky is the limit. A loaf of bread, eggs if you raise chickens or vegetables from
                         your garden. Jams, jellies
                         and marmalade are frequently swapped at these events. Get creative with pasta, granola,
@@ -134,7 +134,7 @@
                         you
                         decide to bring, make sure that it’s packaged in bags or jars and properly labeled.
                     </p>
-                    <p class="f6 lh-copy">
+                    <p class="f5 lh-copy">
                         It's recommended you bring five to ten items you wish to swap, as well as samples or a potluck
                         dish to share with the group.
                     </p>
