--- a/support.html
+++ b/support.html
@@ -92,30 +92,24 @@
                         </p>
                     </div>
                 </div>
+                <div class="cf">
+                    <div class="fl w-100 w-50-l">
+                        <p class="f5 f5-m f3-l">
+                            You can find us on Venmo as <a href="https://venmo.com/Wilmington-FoodSwap">@Wilmington-FoodSwap.</a>
+                        </p>
+                        <p class="f5 f5-m f3-l">
+                            Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
+                        </p>
+                        <p class="f5 f5-m f3-l">
+                            Thank you and have a wonderful day!
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </article>
-    <!-- <article class="center mw5 mw6-ns br3 hidden ba b--black-10 mv4">
-        <h1 class="f4 bg-yellow br3 br--top mv0 pv2 ph3">Money</h1>
-        <div class="pa3 bt b--black-10">
-            <p class="f6 f5-ns lh-copy measure">
-                If you would like to help and none of the above options are right for you, then you can still
-                contribute by donating money to the cause. We will have a donations jar at the event available, or you
-                can also connect to us via Venmo for an easy, digital transaction.
-            </p>
-        </div>
-    </article> -->
-    <section class="pa3 pa5-ns">
-        <p class="f4 lh-copy measure">
-            You can find us on Venmo as <a href="https://venmo.com/Wilmington-FoodSwap">@Wilmington-FoodSwap.</a>
-        </p>
-        <p class="f4 lh-copy measure">
-            Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
-        </p>
-        <p class="f4 lh-copy measure">
-            Thank you and have a wonderful day!
-        </p>
-    </section>
+
     <div class="flex items-center justify-center pa4 bg-yellow navy">
 
         <span class="lh-title ml3"><a href="http://instagram.com/wilmington_food_swap/">@wilmington_food_swap</a></span>
