--- a/support.html
+++ b/support.html
@@ -98,7 +98,7 @@
                             You can find us on Venmo as <a href="https://venmo.com/Wilmington-FoodSwap">@Wilmington-FoodSwap.</a>
                         </p>
                         <p class="f5 f5-m f3-l">
-                            Again, if you have any questions please use the form below to <a href="index.html#contact">contact us</a>.
+                            Again, if you have any questions please use the form to <a href="index.html#contact">contact us</a>.
                         </p>
                         <p class="f5 f5-m f3-l">
                             Thank you and have a wonderful day!
