--- a/support.html
+++ b/support.html
@@ -20,7 +20,7 @@
             <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="#" title="How it Works">How it Works</a> -->
             <a class="link dim dark-gray f6 f5-l dib" href="guide.html" title="Contact">Swap Guide</a>
             <a class="link dim dark-gray f6 f5-l dib ml3" href="support.html" title="Contact">Support us</a>
-            <a class="link dim dark-gray f6 f5-l dib ml3" href="#contact" title="Contact">Contact</a>
+            <a class="link dim dark-gray f6 f5-l dib ml3" href="index.html#contact" title="Contact">Contact</a>
         </div>
     </nav>
 
@@ -42,7 +42,7 @@
                 We hope that you are as excited about our upcoming Food Swap as we are! As you know, coming to our food
                 swaps is always free and you will never have to exchange cash for goods. Behind the scenes however,
                 there are costs associated with organizing and hosting these meetings. Some venues charge for space,
-                and supplies like name tags and paper places can add up.</p>
+                and supplies like name tags and paper plates can add up.</p>
             <p class="lh-copy f5 f3-m f2-l measure center pv4">If you’d like to help support the Wilmington Food Swap,
                 there are three ways you can do so.</p>
             <div class="f5 f3-m lh-copy">
