--- a/index.html
+++ b/index.html
@@ -206,11 +206,15 @@
             </div>
         </div>
     </section>
-    <section class="juice pv2 bg-gold">
+    <section class="juice bg-gold">
         <ul class="juicer-feed" data-feed-id="wilmington_food_swap"></ul>
     </section>
 
     <div class="juicy"></div>
+    <footer class="bg-near-black white-80 pv3 pv3-l ph4">
+        <p class="f6"><span class="dib mr4 mr5-ns">Stitched together by <a href="https://talescript.com">Talescript</a></span>
+        </p>
+      </footer>
     <script>
         let script = document.createElement('script');
         script.src = "https://assets.juicer.io/embed.js";
