--- a/support.html
+++ b/support.html
@@ -109,12 +109,44 @@
             </div>
         </div>
     </article>
-
-    <div class="flex items-center justify-center pa4 bg-yellow navy">
-
-        <span class="lh-title ml3"><a href="http://instagram.com/wilmington_food_swap/">@wilmington_food_swap</a></span>
-    </div>
-
+    <style>
+        .nounP {
+            height: 40px;
+        }
+    </style>
+    <footer class="pa4 pa5-l black-70 bt b--black-10">
+        <div class="mb4-l cf">
+          <h2 class="f2 w-100 pv0 f6 fw6 ttu tracked mb4">Wilmington Food Swap</h2>
+        </div>
+        <section class="cf mb5">
+          <div class="mb4 mb0-ns w-100 w-50-l fr">
+            <a class="black-70 f3 fw6 tl link dim dib pv3 mt2 mb4 mb0-l" href="mailto:wilmingtonfoodswap@gmail.com" >
+                wilmingtonfoodswap@gmail.com
+            </a>
+          </div>
+        </section>
+        <div class="dt dt--fixed w-100" >
+          <div class="dn dtc-ns v-mid">
+            <p class="f7 black-70 dib pr3 mb3">
+              Stitched together by <a href="https://talescript.com">talescript</a>
+            </p>
+          </div>
+          <div class="db dtc-ns black-70 tc tr-ns v-mid">
+            <a href="https://www.facebook.com/wilmingtonfoodswap" class="link dim dib mr3 black-70" title="Wilmington Food Swap page">
+                <svg class="nounP" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96.124 120.154"><path d="M72.089.02L59.624 0C45.62 0 36.57 9.285 36.57 23.656v10.907H24.037a1.96 1.96 0 0 0-1.96 1.961v15.803a1.96 1.96 0 0 0 1.96 1.96H36.57v39.876a1.96 1.96 0 0 0 1.96 1.96h16.352a1.96 1.96 0 0 0 1.96-1.96V54.287h14.654a1.96 1.96 0 0 0 1.96-1.96l.006-15.803a1.963 1.963 0 0 0-1.961-1.961H56.842v-9.246c0-4.444 1.059-6.7 6.848-6.7l8.397-.003a1.96 1.96 0 0 0 1.959-1.96V1.98A1.96 1.96 0 0 0 72.089.02z"/><text y="111.123" font-size="3" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Abdul karim</text><text y="116.123" font-size="3" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+            </a>
+            <a href="https://instagram.com/wilmington_food_swap" class="link dim dib mr3 black-70" title="Wilmington Food Swap page">
+                <svg class="nounP" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 125"><path style="text-indent:0;text-transform:none;block-progression:tb" d="M24 15c-4.934 0-9 4.066-9 9v52c0 4.934 4.066 9 9 9h52c4.934 0 9-4.066 9-9V24c0-4.934-4.066-9-9-9H24zm0 6h52c1.714 0 3 1.286 3 3v23H66.719C65.286 39.073 58.325 33 50 33c-8.325 0-15.286 6.073-16.719 14H21V24c0-1.714 1.286-3 3-3zm46 6a4 4 0 1 0 0 8 4 4 0 0 0 0-8zM50 39c6.11 0 11 4.89 11 11s-4.89 11-11 11-11-4.89-11-11 4.89-11 11-11zM21 53h12.281c1.42 7.942 8.383 14 16.719 14 8.336 0 15.298-6.058 16.719-14H79v23c0 1.714-1.286 3-3 3H24c-1.714 0-3-1.286-3-3V53z" overflow="visible" color="#000"/><text y="115" font-size="3" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Three Six Five</text><text y="120" font-size="3" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+            </a> 
+          </div>
+        </div>
+        <div class="db dn-ns">
+          <p class="f7 black-70 mt4 tc">
+            Copyright © Your Company 2038
+          </p>
+        </div>
+      </footer>
+      
 
 </body>
 
